alignment issues

--- a/src/style.css
+++ b/src/style.css
@@ -336,7 +336,6 @@ a {
 
 #exp .tab-content {
     display: none;
-    background-color: transparent;
     font-size: 0.8rem;
     padding-left: 25px;
     padding-right: 25px;
